fix mini bento double close icon and icon alignment

--- a/app/assets/stylesheets/modules/alternate-catalog.scss
+++ b/app/assets/stylesheets/modules/alternate-catalog.scss
@@ -34,7 +34,8 @@
   }
 
   .alternate-catalog-close {
-    padding-top: 8px;
+    padding-top: 1.5rem;
+    float: right;
 
     &:hover,
     &:focus {
